--- a/technology/《我能做软件工程师吗》.md
+++ b/technology/《我能做软件工程师吗》.md
@@ -208,11 +208,11 @@
 
 ### 去面向未来、技术驱动的公司
 
-我当年从普林斯顿大学毕业时，摆在我面前的选择有
-两个。
+我当年从普林斯顿大学毕业时，摆在我面前的选择有两个。
 
 一个远择是去传统的研究所做研究员，比如微软、英特
-尔、B、贝尔实验室，它们每有全世界最牛的研究所。当时面试我的都是业界非常有声望的人物，比如UNIX系统的贡
+尔、B、贝尔实验室，它们每有全世界最牛的研究所。
+当时面试我的都是业界非常有声望的人物，比如UNIX系统的贡
 献者之一布莱恩·柯林汉等，我在大学使用的教材有很多都
 是他们编写的。
 
@@ -298,7 +298,7 @@
 不是敏捷式，而是两者的结合，你可以把它理解为“变形的
 敏捷”。
 
-举个例子。敏捷模式有四个核心要素：结对编程'、重构
+举个例子。敏捷模式有四个核心要素：结对编程、重构
 简单设计、测试驱动开发(TDD,Test-Driven Development)
 但现在大多数公司不会用结对编程，因为需要的人力太多了；
 大多数软件工程师也不会用TDD,因为它是反直觉的，很多
@@ -312,6 +312,7 @@
 
 #### 开发工具
 编程语言、IDE、源代码管理工具
+
 **测试工具**
 #### 常用文档
 
@@ -321,6 +322,7 @@
 
 变量（包括函数参数）和数据成员的名称均为小写，单词
 之间带有下划线。例如：a_local_variable
+
 [网址](https://google.github.io/styleguide/)
 
 ### 如何练好基本功，写出好代码
