--- a/technology/《我能做软件工程师吗》.md
+++ b/technology/《我能做软件工程师吗》.md
@@ -1,4 +1,29 @@
 # 《我能做软件工程师吗》阅读笔记
+- [一、行业地图](#一行业地图)
+    - [一些说法](#一些说法)
+    - [软件工程师好在哪](#软件工程师好在哪)
+    - [软件工程师难在哪](#软件工程师难在哪)
+    - [软件工程师的未来](#软件工程师的未来)
+
+- [二、新手上路](#二新手上路)
+    - [入职前](#入职前)
+    - [大学学习建议](#大学学习建议)
+    - [选公司](#去面向未来技术驱动的公司)
+    - [调查公司](#如何对公司做反向背调)
+    - [面试](#面试官面试时如何考察人)
+    - [入职后](#入职后)
+
+- [三、进阶通道](#三进阶通道)
+    - [程序设计](#程序设计环节)
+    - [行业黑话](#行业黑话)
+    - [技术调研](#如何做技术调研)
+    - [全局视角](#搭建全局视角产品市场财务思维)
+    - [成事](#成事把一件事情安排妥当)
+- [四、高手修养](#四高手修养)
+    - [过难关](#如何过难关)
+    - [做管理](#如何做管理)
+    - [底层逻辑](#如何思考底层问题)
+
 ## 一、行业地图
 ### 一些说法
 软件工程师之所以热门，是这个职业影响到了越来越多
@@ -380,11 +405,6 @@
 模块组成，它们之间是什么逻辑关系，等等。
 
 
-
-### 杂项
-
-原型设计最根本的不是实现功能，而是注重接口。
-
 ### 行业黑话
 比如，软件工程师说，“这个bug没问题啊，你再试试”
 那他可能刚刚偷偷改完bg;再比如，他说“别人家的实现方
@@ -526,6 +546,10 @@
 有意思的是，做技术管理考验的也是一个人全面思考的能力，它跟写代码时的全面思考是相通的。**写代码要有单元测试，做管理也要有单元测试。**
 
 练习的第一个重占在干表达能力。你要多跟上级交流。
+
+### 杂项
+
+原型设计最根本的不是实现功能，而是注重接口。
 
 ## 四、高手修养
 ### 如何过难关
