--- a/health/《精力管理》.md
+++ b/health/《精力管理》.md
@@ -1,5 +1,19 @@
 # 《精力管理》阅读笔记
 
+-[第一部分 如何做到全情投入](#第一部分-如何做到全情投入)
+  - [第一章 什么是精力及如何管理](#第一章-什么是精力及如何管理)
+  - [第三章 高效表现有节奏——劳逸结合的平衡](#第三章-高效表现有节奏劳逸结合的平衡)
+  
+-[第二部分 精力管理的四个来源](#第二部分-精力管理的四个来源)
+  - [第四章 体能精力](#第四章-体能精力)
+  - [第五章 情感精力](#第五章-情感精力)
+  - [第六章 思维精力](#第六章-思维精力)
+  - [第七章 意志精力](#第七章-意志精力)
+
+-[第三部分 精力管理训练系统](#第三部分-精力管理训练系统)
+  - [第八章 明确目标](#第八章-明确目标知道什么最重要才能全情投入)
+  - [第九章 正视现实](#第九章-正视现实)
+  - [第十章 付诸行动](#第十章-付诸行动)
 
 ## 第一部分 如何做到全情投入
 
@@ -153,7 +167,7 @@
 
 **_体现在行为中的价值观才是美德_**
 
-### 正视现实
+### 第九章 正视现实
 回避现实会消耗大量精力。
 
 ![alt text](jingliguanli8_1.jpg)
@@ -162,6 +176,6 @@
 
 **_自我欺骗==(客观事实=自己的观点)_**
 
-### 付诸行动
+### 第十章 付诸行动
 
 面对的困难越大，人们越容易退回旧日的生活习惯，因此良好的习惯非常重要。
