继续整理我能做投资人吗

--- a/economy/《我能做投资人吗》.md
+++ b/economy/《我能做投资人吗》.md
@@ -673,3 +673,632 @@ Airbnb和Uber（优步）就是在这一背景下成立的典型公司。
 的变动成本支出。比如，摊薄费用，或者探讨是否有减少仓
 储成本的可能，等等。
 #### 2.8.6 计算规模：记住500亿这个虚数，从上到下去推演
+
+所谓市场规模，是指一段时间内，一类服务或者产品在某一个范围内的市场销售额。
+
+那么，一家公司所在领域的市场规
+模要有多大才算是理想的呢？
+
+我先告诉你结论，然后我们自上而下地做一遍推演
+我自己估算出来的数字是500亿元。这是个虚数，也许
+是200亿元、300亿元，也许是1000亿元，具体数值取决于
+行业的利润率水平。但是，一个领域只有具备200亿~1000
+亿元的市场规模，才有可能成就一家10亿美元估值的公司，
+也就是我们常说的“独角兽”。
+
+这里首先要注意，500亿元不是说收入，而是说前面提到
+的市场销售额，比如GMV（Gross Merchandise Volume,成交
+金额）'。以某视频网站为例，它以会员缴纳的会员费和广告为
+主要收入来源，那么，会员费和广告所产生的最终GMV才是
+这里所指的市场规模。
+
+在500亿元的市场规模里，假设你看的这家公司市场
+占有率为20%，那么它的市场规模就是100亿元（500亿元
+×20%）。而“找到差异”一节提到过，新的公司模式要在效率上有所提升，假设它的效率提升是2倍，这家公司就有50
+亿元的GMV.
+
+在50亿元的GMV里，如果公司能赚取5%~10%的
+净利润率，就已经非常高了。以电商平台为例，5%~10%
+的净利润率实际上是佣金比例。也就是说，50亿元的平台
+GMV,公司最后只有8%左右的利润率，也就是4亿元的利
+润。按照l5倍的市盈率(PE,Price Earnings Ratio)'计算，就
+能得到60亿元，也就是10亿美元左右的估值。
+
+你可能会问，为什么是15倍的市盈率？因为假设公司利
+润在达到4亿元时，市场占有率达到20%，公司在市场上就
+已经处于一种比较均衡、稳定的状态了。这时PE倍数不会
+特别高。
+
+你可以看到，一个实打实的10亿美元估值的“独角兽”
+企业，要有4亿元的利润，这对一家企业的要求是非常高
+的。进一步拆解4亿元利润：这家企业若是可以从每个用户
+身上赚100元，按照8%的利润率计算，用户就要消费1250
+元(100/8%)：而像这样能够消费1250元的付费用户要有
+400万名左右。可以想见，如果不是在中国这样有十几亿
+人口的“超级市场”里，找到400万名这样的付费用户是一件
+多么困难的事情。
+
+市场容量的大小会间接影响到企业在发展过程中能够获
+取的用户数量及净利润，而且这种影响力很大。在看一家公
+司所在领域的市场规模时，你也可以借用500亿元（市场规
+模）这个虚数，自上而下去核对它的利润与估值（推演过程如
+图2-2所示）。
+
+市场容量的大小会间接影响到企业在发展过程中能够获
+取的用户数量及净利润，而且这种影响力很大。在看一家公
+司所在领域的市场规模时，你也可以借用500亿元（市场规
+模）这个虚数，自上而下去核对它的利润与估值（推演过程如
+图2-2所示）。
+
+![alt text](wonengzuotouzirenma2_2.png)
+
+工作一段时间之后，你会发现，很多投资人在跟创业者
+沟通时经常会强调“短期看需求，长期看壁垒”。
+
+短期之所以要看需求，是因为创业初期容易短暂地出现
+供给真空期。企业只要满足好一小部分用户的需求，就可以
+享受一段时间的红利。但伴随着越来越多的玩家入场，市场
+会逐渐趋于饱和，没有形成壁垒的公司就会在竞争中被淘汰
+从长远来看，对一家想要对标“独角兽”的企业而言，建立属
+于自己的护城河至关重要。
+
+接下来，让我们先厘清有关壁垒的一些概念。
+
+### 2.9 建立壁垒
+
+#### 2.9.1 壁垒可以做哪些区分
+
+壁垒和优势的区别：
+
+壁垒是我有、其他人没有或者很难拥有的东西。
+
+进入壁垒VS竞争壁垒
+
+进入壁垒：专利技术
+
+竞争壁垒：品牌优势、规模经济、网络效应
+
+#### 2.9.2 品牌优势：把品牌打到极致的“沸水效应”
+互联网品牌的营销策略讲究所谓的“沸水效应”，品牌没打到极致
+，就像水没烧到100度，不继续烧热度很快就没了，但只要先把水
+烧开，哪怕后面只是用小火慢煮，也能保证水一直在沸腾。
+用户对品牌的持续认知也是这个道理。
+
+还有一点很重要的认知是，即便公司的体量不同，把品
+牌打到极致的重要性也是相同的。杨浩涌曾用二手车线上交
+易网站举过一个例子：你不会在做1万辆车时只需要1亿元
+广告费，做10万辆车时需要10亿元，而是从头到尾都需要
+10亿元。这对投资人的启示在于，早期公司也要有建立品牌
+的意识。如果一家公司在创业初期没有一个立得住的品牌，
+进入成长期后，它的获客成本就会随之变高，容易在行业竞
+争中处于劣势。
+
+然而，对很多初创企业来说，在资金不够充裕的情况下
+想要用重金“砸”出一个立得住的品牌是不切实际的。那除
+此之外，企业还可以通过哪些方法建立品牌优势呢？
+
+第一，企业要培养自己的产品能力，研发出足够有竞争
+力的产品。这不是老生常谈，很多公司早期与其说是在打响
+品牌，不如说是在建立口碑。产品有了好口碑，最直观的表
+现是用户自己的复购，以及推荐他人购买。这对早期公司来
+说非常重要。
+
+第二，企业要培养自己搭建渠道的能力。拿火遍大江南
+北的凉茶品牌王老吉来说，除了产出爆款广告“怕上火，喝王
+老吉”，王老吉团队还以能在一夜之间把产品送达全国各地餐
+饮饭店的铺货能力闻名。很多时候，一个品牌的胜利同样得
+益于渠道的胜利。企业能否搭建多元的销售渠道——无论是
+线下还是线上私域流量的拓展——触达消费者，
+是你在考察品牌优势时应该着重考量的。
+
+第三，企业要培养自己定义新品类的能力。现在一些比
+较成功的品牌，其实是在传统品类里发现了一些符合用户需
+求的新品类。最典型的一个例子是喜茶。在早期流行用奶精
+冲泡的茶饮行业，自建茶园、自供茶叶的喜茶显得非常小众。
+但是，喜茶满足了很多年轻人“想喝奶茶又不想太有罪恶感”
+的诉求，开创了“新式茶饮”品类，在竞争者不断的茶饮行业
+站稳了脚跟。企业能否定义新品类，以及品类是否有发展
+成长的潜力，也是你在考察品牌优势时需要把握的。
+
+#### 2.9.3 规模经济：用规模去改变成本和运营结构
+
+九号公司的例子：想法设法降价。从选择轻量级的材料到优化
+供应链，再到控制成本，都是为了以更低的价格推动销量
+增长，实现规模效应。
+
+赛格威版平衡车——4950-6124美元不等。
+
+九号公司第一代平衡车——1.2万元，第二代平衡车——1999元。
+
+2015年九号公司收购赛格威。
+
+#### 2.9.4 网络效应：能够自循环的产品才是最优秀的产品
+
+评价产品优劣：
+
+能否增加用户
+
+能否留存用户
+
+能否自循环形成壁垒
+
+![alt text](wonengzuotouzirenma2_3.png)
+
+为什么这么说？通常情况下，产品的新增用户几乎不会
+对老用户产生价值。但如果平台里相当一部分内容能被放入
+公域市场，让用户之间产生关联，他们可以在平台的公共场
+域参与讨论，其讨论又能被新用户阅读，那么新增用户就有
+可能对老用户产生增益效果。这就是为企业筑起竞争壁垒的
+一种网络效应。
+
+你会发现，那些在自身核心商业模式中植入了网络效应
+的公司往往能够取胜。除了前面说到的这种形式，网络效
+应还有很多其他表现。比如，微信这款产品中植人了个人效用
+网络：用户和用户之间是具有关联性的，用户在这里与自己
+社交圈内的人沟通，维系自已对外的形象：选择从中退出的
+话，用户的社交关系会受到极大的影响。同理，用户如果单
+方面选择一款“与众不同”的社交软件，也会因为无法形成网
+络效应而难以持续地使用。
+
+再比如，淘宝、拼多多等交易平台植人了双边网络：供应
+和需求两侧的用户在加入网络后为对方提供互补性的价值
+用户量越大，平台商品的价格会越有竞争力。同时，因为它
+们的价格与其他平台相比有显著优势，所以有机会获取更多
+用户。至于那些建立起强连接的双边网络，还可以配置上下
+游的资源。美团就投入了大量精力帮助广大中小餐厅做数字
+化经营，让它们可以更加顺畅地接入网络。
+
+除此之外，电子游戏机Xbox中植入的是平台网络：它可
+以把用户与海量游戏连接到一起。它拥有更多的用户，就可
+以吸引到更多的游戏内容；有了更多的游戏内容，就又会吸
+引到更多的用户。相较于游戏带来的网络效应，Xbox本身的
+价值就相对显得次要了。
+
+这些公司通过不同形式的网络，实现了“越大越好、越好
+越大”的自循环。总而言之，你在评估一家公司及其产品是
+否发挥了网络效应时，就看两个方面：第一，用户与用户之间
+是否存在关联性；第二，新用户的增加是否能够使老用户的
+价值增大。符合这两个条件，就可以算是具有了网络效应。
+
+#### 2.9.5 数据优势：全方位描摹用户，理解市场需求
+先来做一个思想实验：如果你现在有几百亿元的资本，
+是不是可以再造一个淘宝出来？我想，绝大多数人会给出否
+定的答案。其中很重要的一个原因是，淘宝在几十年的经营
+中留存了大量B端和C端的数据，这些数据是你今时今日
+“再造”淘宝是难以企及的。
+
+投资人需要意识到，除了彼得·蒂尔提到的几类壁垒，
+企业善于应用数据的能力同样是典型的竞争壁垒。并且，这
+种能力在未来会发挥越来越重要的作用。
+
+我们平日里使用抖音、网易云音乐、美团等产品，经常会
+有这样的体验：多次打开Ap即看短视频、听歌、点外卖，平台
+就会把更符合你口味的内容推送给你。这正是因为平台通过
+分析数据，为不同的数据赋予权重，进而对用户进行了全方
+位的描摹，并在此基础上为用户提供更为精准的推荐服务。
+
+只要把数据视作串联平台内部各项业务的一条绳索，我
+们就可以极大地提高效率、增加用户黏性。与此同时，使用
+产品的用户又会形成数据回流，进一步完善企业对用户的认
+知。你可以看到，企业正是通过数据去理解用户变化的需求，
+主动对市场变迁做出响应。
+
+反过来，我要提醒你的是：如果数据只是产品的边缘属
+性，那么它发挥的作用会明显减弱。很典型的一个例子是在
+线视频App。真正为爱奇艺带来价值的是App里电视剧、电
+影等的节目存量，而不是推荐节目的功能。在爱奇艺节目储
+量不足的情况下，数据能够起到的作用非常有限。
+
+也就是说，在企业的数据和其核心业务高度挂钩的情况
+下，你应该着重考察企业运用数据驱动自身业务及产品的能力。
+
+罗伯特·伯格曼(Robert Burgelman)说的一则忠告：
+**_工作和生活中最大的危险不是彻底的失败，而是成功了却全然不知成功的原因。_**
+
+### 2.10 怎样判断项目基本面的增长质量
+
+1、市场大小和增速
+
+2、产品的差异化程度和壁垒
+
+3、产品增长的路线图。
+
+投资人头的不是一家公司的现在，而是它的未来，
+因此它未来的产品形态也是十分重要的。
+
+4、创业团队的愿景、组织能力、执行力。
+
+5、单位经济效益和现金流情况
+
+好的单位经济模型，得到APP，新用户购买听书的产品，
+之下从已经录好的音频文件调出来即可，边际成本为0.
+
+6、政策导向
+
+### 2.11 如何从终局出发判断企业的价值
+
+具体来看，行业终局主要有以下三种。第一种是一家独
+大，其他竞争对手都不成气候。比如，腾讯旗下的微信基本
+满足了人们熟人社交的需求，用户无须再下载同类别的其他
+ApP。第二种是双寡头或者多寡头的制衡局面。在线视频行
+业正是如此，由于版权采购、内容产出能力等的差异，视频行
+业在保持“爱优腾”(爱奇艺、优酷和腾讯视频)三足鼎立格
+局的同时，也不断受到芒果TV和哔哩哔哩的制衡。第三种
+则是百花齐放的业态。一些用户转换壁垒低的行业（比如消
+费品牌），以及决策点比较多的行业（比如汽车行业），很容易
+形成这种多家并存的业态。
+
+在行业终局相对清晰的情况下，你可以估算市场空间，
+判断公司价值。比如，在一家独大的情况下，你预估这个市
+场可以跑出100亿美元市值的公司。即便按照其他估值计算
+方法，这家公司目前只有10亿美元的估值，有的投资人也愿
+意给出高于10亿美元的估值。因为从终局判断，这个项目未
+来可以涨到100亿美元。现在给的估值高，就可以占比较大
+的比例，未来能够赚的倍数也更高。
+
+以我投资运满满为例。我们在评估这家公司时，它还没
+有收入，但它在货运行业领头羊的地位已经相对清晰了。我
+们基于此行业终局的情形，测算了未来可能有的市场规模，
+推算出我们能够赚的倍数，然后进行了投资。
+
+这里我要特别提醒你，从行业终局回例公司估值的思维
+方式更适用于竞争格局相对比较清晰的行业。相反，在一些
+终局尚不明晰的行业，投资人的估值判断很容易失焦。
+
+比如十年前的美团，有投资人认为外卖满足的是一小部
+分用户平日里偷懒不想做饭的需求，市场规模相对有限；也
+有投资人认为它是对餐饮行业的一种替代，市场规模巨大，
+企业的估值也更高。再比如今天的元气森林，一些投资人认
+为它有望“干掉”可口可乐，另一些投资人则认为它只能在无
+糖饮料的赛道中杀出重围。因为可口可乐与无糖饮料所在的
+市场规模差别很大，投资人对元气森林的价值判断也会有很
+大的偏差。
+
+### 2.12 如何排查项目的风控点
+业务风控，投资人对公司业务风险点的排查，通常以商业尽调
+的形式完成。
+
+![alt text](wonengzuotouzirenma2_4.png)
+
+这三块风险点都可以细分为可解决和不可解决的风险
+点。不可解决的，就是会影响公司未来融资乃至进入资本市
+场的要素。如果一个项目存在这类风险点，我们通常倾向
+于选择放弃。至于可解决的风险点，比如由于创业公司早期
+在业务、法务和财务方面没有配备完全专业人才，难免存在
+业务模式暂时没跑通，或者法务、财务不合规的情况，你要
+保持开放的态度，进一步判断哪些是标的公司需要自己解决
+的，哪些是你所在的投资团队可以帮助他们处理的。上述关
+于风险点的把控，都有可能成为你与标的公司谈判乃至起草
+投资协议的依据。
+
+投资风控，有业务、法律、财务方面，这几个方面不是一个人来
+负责，通常后两个层面由专人负责。
+
+### 2.13 寻找创始人有哪些有效的渠道
+
+#### 来自FA：通过财务顾问触达更多项目
+投资有轮次，也就有所谓的“上下游”关系。所以很多时
+候，投资人就是在和上下游深度合作的过程中找到项目的
+比如、一个投天使轮基金的合伙人会把手里的项目告诉专注
+于A轮投资的基金合伙人：“我这边有个好的投资项目，你看
+看要不要接盘。”或者，一个主要投B轮项目的投资人会定期
+和上游的同行沟通，聊聊他们手上的A轮项目。早期投资人
+可以作为后期投资人的信息渠道。
+
+你会发现，在上下游互相通气的模式之下，投资项目是
+在一个私密的社会循环(private connection)流动的。如果你
+不在这个循环里，就比较难拿到项目。但作为新人，你可能
+在自己机构的人都没混熟，又要怎么从上游机构的同行那里
+获取项目呢？别急，你可以在以下几个小节里看看新人取得
+项目的渠道。
+
+最常见渠道是FA。
+
+#### 来自企业：盯住头部公司里的中高层
+
+大公司或者特定赛道的头部公司培养了非常多有经验的
+从业人员。腾讯的人在游戏、社交方面的经验遥遥领先，阿
+里巴巴的人对投放、增长、供应链等电商模块的理解同样非
+常深入。像有赞的CEO（首席执行官）朱宁、去哪儿网的总
+裁张强等，就都是出自阿里巴巴的优秀创业者。
+
+你其实可以有意识地去认识这些头部公司的中高层，或
+者是对业务模式有相关深入理解的人。如果后续他们有创业
+的打算，你就可以在第一时间跟他们建立起联系。而在这个
+阶段，他们一般非常乐于同投资人交往，也愿意了解投资人
+熟悉的相关领域一级市场未上市公司的运营情况。因而，投
+资人和这些高管的社交能有一定的互补性。同时，因为没有
+融资方面的压力，他们也不大会介意对话的对象究竟是新人
+还是合伙人。
+
+和围堵创业团队相比，借由校友或者同事的社交网络寻
+找大公司里那些尚未创业的创业者，不失为一个更高效的工
+作方法。
+
+在寻找潜在创业者时，很多投资人会格外关注校友的社
+交网络。这是因为高校作为一个“超级节点”，连接起了丰富
+的人才和技术资源。
+
+那些在大公司积累了管理经验、出来创业的人，往往会
+在校友中间寻找合适的技术一他们很多都是在校友科研成果
+的基础上创业的。
+#### 来自媒体：抓住创始人释放出的信号
+
+举一个挺常见的例子：你可能见过有的创始人在公众号
+上频繁更新一些分析自己所在行业的文章，或者原先不常在
+媒体抛头露面的创始人，现在密集接受采访，分享近期自己
+对行业的一些看法。通常，诸如此类的解读分析并不是创始
+人没来由地爆发表达欲。这般“孔雀开屏”，很可能是一个融
+资信号：我对行业格局有非常深入的了解，研究成果也初有
+起色了，你们（投资人）快来找我聊吧。
+
+对于这种创始人，你可以先以“请教创始人对行业看法'
+为由找到他，和他沟通融资方面的想法。即便会错了意，你
+也能收获行业专家近身的判断观察，何乐而不为呢？
+
+### 2.14 考察创始人要看哪几个方面的能力
+
+#### 愿景力——将业务高度抽象，再把它做实
+我们通常认为，“愿景”是一个很务虚的词。它遥远且抽
+象，无法解决具体问题。但我认为，投资人对创始人的第
+评价要素就应该是愿景力。
+
+在想事、做事的时候，有的创始人倾向于脚踩西瓜皮，滑
+到哪里是哪里：有的创始人则倾向于把所做之事的前景乃至
+终局尽可能地考虑清楚。对于这两类创始人，投资人肯定更
+倾向于后者。这类创始人身上表现出来的对未来大势的把握
+能力就是愿景力，这是评判一个创始人能否在某种趋势之下
+抽象出核心的关键点。
+
+以你熟知的两位创始人为例来解释一下。字节跳动创始
+人张一鸣用机器分发替代门户网时代的人工编辑，是因为他
+先人一步，把移动互联网核心的关键点抽象成推荐算法。拼
+多多创始人黄铮致力于打造“多实惠多乐趣”的购物体验，也
+是因为他将社交电商的关键点抽象成为“开市客(C0stco)+
+迪士尼(Disncy)”，即“精选商品+娱乐”模式，创新利用游
+戏化的手段运营电商平台。
+
+把握未来大势并将其高度抽象的能力非常珍贵。在早
+期，张一鸣对移动互联网的抽象，以及黄铮对社交电商的抽
+象，只是极少数人的共识，大多数人并不认可。投资人首先
+要房酯自己的专业能力，成为能和创始人形成共识的那一小
+部分人。
+
+除此之外，我认为投资人还要考察创始人是否可以把轴
+象思考转化为战略步骤去实现。这是因为当创始人对未来之
+势形成前瞻性的判断后，在执行层面还会有千差万别的表现
+是否可以将愿景真正投入行动，也应该被纳人对创始人愿景
+力的考察当中。
+
+比如我们投了musical.山y。这是一款音乐类短视频社区
+App,用户上传自己拍的视频，配上App曲库中的音乐，就可
+以制作MV。在这个App上，很多人一边播放音乐，一边配
+上自己对口型的视频，最终制作音乐视频一这种形式被称
+为Lip Syne.
+
+在做这个应用时，Alx（朱骏）一开始就想让用户意识到
+这是一个音乐社区软件，所以他有计划地做了三件事：第一，
+在App的首页告诉用户这是一个Lip Syne创作工具和内容社
+区。第二，新用户加入Ap之后，平台会推送给他们看社区
+内最好的内容，帮助用户形成对这个Ap的认知。第三，发
+通知邀请用户发布第一条内容。
+
+这三件事做完之后，用户就很清楚地知道nusical.ly是一
+个什么样的应用了。接下来的事就是尽量多地吸引用户。关
+于这一点，Alex也有明确的筹划。
+
+Alex有一句话说得特别好：一开始，musical.ly可能是
+个工具，但最终我们要把它做成一个社区，社区就是一个社
+会。从人类社会体制演变的角度来看，它是从奴隶制社会发
+展到封建社会，然后发展到资本主义社会、社会主义社会。
+在奴隶制社会时期，人类社会的资源只集中在少数奴隶主身
+上；到了封建社会时期，社会财富增加，可以供养更多人，于
+是就出现了一大批地主，地主数量远超奴隶制时期奴隶主的
+数量；到了资本主义社会时期，社会财富可以供养更多人，大
+量中产阶级兴起。既然musical.ly是一个社区，我们就可以把
+它的流量总额看成不同社会阶段的财富总额；社会的发展方
+向是财富从集中在几个人身上慢慢向广大民众渗透，那么社
+区的发展方向也就应该是这样。
+
+所以，在吸引新用户这件事情上，当时Alx的策略是这
+样的：
+
+第一步，当一开始musical..ly的流量没有那么多的时候，
+先把流量倾斜在几个头部用户身上。比如你平台上一共就
+100个用户，你把流量平均分给每个人，可能一个人分得1万
+的流量，那么头部的人不愿意来。但是你把100万的流量
+分给10个人，每个人有10万个粉丝，就会有人说这个平台好。
+而这些头部用户高质量的内容，就可以持续吸引新用户。
+
+第二步，当平台的流量越来越大时，就可以保证更多的
+人拥有比较多的关注。这时除了头部用户，一些腰部用户也
+可以拥有一定的流量倾斜。
+
+第三步，当平台的用户数量达到一定规模后，再把流量
+分给一些普通用户，这样他们也会在平台上收获自己的粉丝。
+让更多人在社区里被看见一这是Alex的愿景，也是他
+从一开始做musical..ly时设想的工作步骤。后来，他也是这么
+一步步贯彻下去的。
+
+#### 同理心——理解消费者、员工甚至竞争对手
+关于创始人的同理心，我们可以从苹果研发第一代
+Phone的事例开始讨论。
+
+你可能还记得，刚进入21世纪时，塞班系统下的实体按
+键手机曾是绝对的主流。那时，苹果公司内部正为开发
+全新的手机形态打得不可开交。其中一款方案一用更大的显示
+屏替代实体键盘，也就是在Phone的基础上沿用至今的方
+案，如今我们已经非常熟悉了。但苹果公司同期还在开发
+款形似P,也就是有按键的手机。因为“更可行、更可预
+期”，这款方案在当时得到了很多人机界面设计师和销售人员
+的支持。
+
+但乔布斯始终认为，“手指是最好用的工具”。他力排众
+议，坚持以纯粹的触摸屏替代键盘。故事接下去的发展你应
+该不陌生了：第一代iPhone的惯性滚动和回弹效果彻底改变
+了人机互动方式，为越来越多的用户所接受。
+
+乔布斯选用这款方案不全然是因为他本人的直觉。他更
+需要从用户的角度出发，深度思考用户的使用体验。像这样
+置身于他人处境，共情他人感受，体会他人想法的能力，是一
+名创始人难能可贵的同理心，也是你应该着重考察创始人的
+维度之一。
+
+当然，创始人的同理心不仅表现在对消费者需求的深刻
+感知上。你还可以通过尽调环节的访谈，去了解创始人是不
+是对自己的员工，甚至同行业其他的竞争对手怀有同理心。
+比如，员工工作失误时，创始人能否厘清其中哪些是员工自
+身的原因，哪些又是由其他情况造成的，员工是不是有什么
+难言之隐，等等。再比如，创始人对行业内的竞争对手持有
+怎样的态度，是鄙夷不屑还是惺惺相惜，是否会思考彼此共
+赢的可能性，等等。
+
+#### 领导力——成为团队中的“孩子王”
+在考察初创团队时，可以着重看重创始人组建的团队里有没有
+与他认识时间相当长的人。只有在他身边学习和工作了很久，
+和他有过长时间接触的人，才能对创始人有真正深刻的认识。
+
+**_最忌讳的情况是，早期看起来各方面都很优秀的CEO，搭起来的团队里却没有他比较熟悉的人。_**
+
+提问：过去一年里，你们公司加入的高级别人才有哪些？
+
+之所以要提这个问题，是因为通过它能看出公司在过去
+两年内引入人才的水平和情况。在评判创始人的领导力
+时，像宜买车团队那样持续有高水平人才加人肯定是一个加
+分项。反过来，如果没有什么高管加人，大概有三种可能性：
+
+第一种可能性是创始人不具备足够的领导力，很难吸引
+牛人加入。这肯定是投资人最不想看到的情况。
+
+第二种可能性是公司业务不具备优势，所以很难吸引到
+优秀人才。这需要我们根据公司的产品、业务、创始人等维
+度进行交叉验证。
+
+第三种可能性是创始人或许很优秀，公司的业务发展也
+很好，但他没有意识到优秀团队的重要性。相对来说，这一
+点是轻度问题。如果创始人可以保持开放性，团队也可以在
+与创始人的沟通中看到他想要做出改变的意愿，这个问题就
+是比较容易解决的。
+
+一直以来我都认为，一家10亿美元市值的公司是产品和
+创始人共同作用的结果，可能一位水平在A-或者B+的创业
+者就可以实现；但如果想做出一家100亿美元市值的公司，
+一定要由水平在A或者A+的创始人来把控。
+
+#### DNA——创始人过去的经历非常关键
+
+判断创始人的DNA怎么样，核心是**_判断他过去的经历能不能支撑他做现在的事情_**
+
+一个创业项目的成功，**_需要创始人人生阅历和资源的总爆发。_**
+
+受阅历和经验所限，一些年轻的创始人对业务模式的思
+考可能比较浅，尚未表现出一名A+水平创始人的核心能力
+对此，你要保持开放的心态，持续跟踪他们的成长情况。比
+如，每隔四五个月和他们交流沟通一下。
+
+这么做一方面是为了及时识别创始人关键能力的变化，
+另一方面也是为了建立起双方的信任。风险投资从来不是一
+锤子买卖，即便决定不投一个项目，投资人事后的反应，比如
+是杳无音信还是持续跟进，也会给创始人留下完全不同的感
+受。在持续沟通过程中建立起相互信任的关系，创始人会更
+有信心把真实的想法告诉你。
+
+当然，投资人持续跟踪创业者，很大程度上也是出于“未
+来在某个合适的时间节，点再下手”的考虑。但能够这么做的
+前提是投资人所在基金的规模比较大，介入一个项目的时间
+点相对灵活。否则，投资人在投资阶段上就会有很多限制
+
+### 2.15 怎么看创始团队的股权架构设计
+
+警惕：
+
+联合创始人的持股过于平均。
+
+投资人之间利益冲突严重。
+
+员工股权不足。
+
+一个行业里不同公司的薪酬体系
+会有非常明显的趋同效应。在缺乏股权激励的情况下，企业
+经常要面临人才“被打劫”的情况。你需要去研究，创始人
+是如何在设计员工持股计划(ESOP)和防止股比过度稀释之
+间，找到折中办法以吸引核心人才的。而当股权激励带来员
+工“躺在功劳簿上睡大觉”的负面影响时，你还要看创始人是
+如何使用人力资源手段化解它的。
+
+
+## 第三章、进阶通道
+### 3.1 想要完成投资，还要懂得哪些业务
+
+#### 学财务：管理会计知识>财务会计知识
+
+#### 算估值：找准与项目适配的估值方法
+
+市盈率 = 参照公司估值 / 参照公司年度净利润
+
+目标公司估值 = 目标公司年度净利润 * 合理的市盈率倍数
+
+#### 投资意向协议：根据项目情况和外部环境调节条款
+
+#### 股权购买协议：重视尽调反映的小瑕疵
+
+### 3.2 投出资金后，你要为企业提供怎样的服务
+
+#### 战略：和被投企业保持输入和输出
+
+#### 人才：帮助创始团队弥补人才短板
+与其干巴巴的跟创始人说明人才的稀缺性，直接带他去见
+“实物”的帮助更大。
+
+#### 资金：为下一轮融资未雨绸缪
+当企业现金流存量大于等于18个月时，就要准备和资本的对接了。
+
+### 3.3 想要提升能力，哪些经验值得吸取
+
+#### 习惯：在大滞后系统里通过复盘完成神圣的闭环
+
+#### 反思：什么是能够重复使用的、有效的复盘
+
+#### 动态：开放地看待公司发展的变化
+
+#### 选择：把时间分配给关键变量
+
+#### 定位：长期目标没错，短期小错不打紧
+
+## 第四章、高手修养
+
+### 4.1 高手不全是“老前辈”
+
+### 4.2 高手有哪些独特的能力
+
+#### 迁移：把不同行业联系起来自由思考
+所有商业模式都面临着来自其他领域的竞争。
+#### 感知：预判外部环境的变化
+
+#### 选择：找到适合自己的投资方式，不轻易变道
+
+### 4.3 高手有哪些有价值的认知
+
+#### 价值：买入一家真正创造价值的公司最重要
+
+#### 非共识投资：追求十倍以上的投资回报
+
+### 4.4 高手怎样进行团队管理
+
+#### 团队：招募一支队伍，让他自发生长
+
+与其说要管理这些人才，高级职级的投资人更倾向于在
+团队中搭建平台，让成员自发的去交流。
+
+#### 责任：受托人责任是把职业做长的根基
+
+#### 留人：避免人才流失的关键是激励到位
+
+## 第五章、行业大神
+
+唐*瓦伦丁：下注赛道，而非赛手
+
+约翰*杜尔：寻找对未来有影响力的项目
+
+沈南鹏：理性的“风险投资之王”
+
